# infobot_planning

./: README.md
infobot_amcl/: CMakeLists.txt  package.xml
infobot_amcl/launch/: amcl.launch
infobot_amcl/src/: pub_initialpose.cpp
infobot_find_viewpoint/: .gitignore  CMakeLists.txt  README.md  package.xml
infobot_find_viewpoint/cfg/: InfoBotFindViewpoint.cfg  InfoBotFindViewpointVis.cfg
infobot_find_viewpoint/launch/: find_viewpoint.launch  record_retrospective_data.launch
infobot_find_viewpoint/scripts/: retrospective_query  send_find_viewpoint  send_goal  send_multiple_goals  test_action.py
infobot_find_viewpoint/src/: pmap_to_octomap_node.cpp  validate_float.h  visibility_reasoner_node.cpp  visibility_reasoner_utils.h
infobot_find_viewpoint/srv/: ComputeVisibilityValue.srv
infobot_find_viewpoint/test/: compute_vis.rviz  corridor-topo.yaml  corridor.pgm  corridor.yaml  find_viewpoint.rviz  real-floor4_corridor-model.bt  real-floor4_corridor.yaml  room.yaml  test.launch  test.py  test_compute_vis.launch  test_compute_vis_val  test_compute_vis_vals  test_find_viewpoint.launch  test_retrospective.launch  test_retrospective_collect_data.launch  test_retrospective_save_data.launch  test_utils.py  test_vis_vals.py
infobot_find_viewpoint_msgs/: CMakeLists.txt  package.xml
infobot_find_viewpoint_msgs/action/: FindViewpoint.action
infobot_find_viewpoint_msgs/srv/: ComputeVisibilityValue.srv  ComputeVisibilityValues.srv
infobot_gmapping/: CMakeLists.txt  package.xml
infobot_gmapping/launch/: gmapping_default.launch  gmapping_rgbd.launch
infobot_map_msgs/: CMakeLists.txt  package.xml
infobot_map_msgs/msg/: ProbabilityGrid.msg
infobot_map_msgs/srv/: GetProbabilityMap.srv
infobot_map_store/: CMakeLists.txt  package.xml
infobot_map_store/srv/: GetMap.srv
infobot_mapping_msgs/: CMakeLists.txt  package.xml
infobot_move_base/: CMakeLists.txt  package.xml
infobot_move_base/launch/: move_base.launch  nogo_map_server.launch
infobot_move_base/params/: costmap_common_params.yaml
infobot_move_base/scripts/: send_goal  send_multiple_goals
infobot_move_base/test/: test_multiple_goals
infobot_multi_map_navigation/: CMakeLists.txt  package.xml_disabled
infobot_multi_map_navigation/scripts/: elevator_transition
infobot_octomap_server/: CMakeLists.txt  package.xml
infobot_octomap_server/launch/: octomap_mapping.launch
infobot_octomap_server/src/: octomap_from_map_static_server.cpp
infobot_octomap_store/: CMakeLists.txt  package.xml
infobot_octomap_store/launch/: octomap_store.launch
infobot_octomap_store/src/: octomap_store.cpp
infobot_octomap_store/srv/: GetOctomap.srv
infobot_path_server/: CMakeLists.txt  package.xml
infobot_pmap_store/: CMakeLists.txt  package.xml
infobot_pmap_store/scripts/: publish_pmaps_multiplied
infobot_pmap_store/srv/: GetProbabilityMap.srv
infobot_pmap_to_octomap/: CMakeLists.txt  package.xml
infobot_pmap_to_octomap/src/: pmap_to_octomap_node.cpp  validate_float.h
infobot_pmap_to_octomap/srv/: GetProbabilityOctomapHeight.srv  GetProbabilityOctomapSurface.srv
infobot_topo_mapping/: CMakeLists.txt  README.md  package.xml
infobot_topo_mapping/cfg/: InfoBotTopoMapping.cfg  SaraTopoMapping.cfg
infobot_topo_mapping/evg-thin/: datatypes.hh  evg-thin.cc  evg-thin.hh
infobot_topo_mapping/include/infobot_topo_mapping/: cost_extractor.h  node.h  place_sampler.h  thinning.h  topo_exception.h  topo_extractor.h  visualizer.h
infobot_topo_mapping/launch/: extract_topology.launch  extract_topology2.launch
infobot_topo_mapping/scripts/: add_map  create_new_map
infobot_topo_mapping/src/: cost_extractor.cpp  node.cpp  place_sampler.cpp  thinning.cpp  topo_extractor.cpp  visualizer.cpp
infobot_topo_mapping/test/: params.yaml  params_floor4.yaml  params_ground.yaml  real-floor4-ext.yaml  real-floor4-topo-ext.yaml  real-floor4-topo.yaml  real-floor4.pgm  real-floor4.yaml  real-ground-nodoor.pgm  real-ground-nodoor.yaml  real-ground-nodoor_orig.pgm  real-ground-nodoor_small.pgm  real-ground-topo.yaml  real-ground.pgm  real-ground.yaml  rviz.rviz  sim-params.yaml  test_extract_topology.launch  test_extract_topology2.launch  test_extract_topology3.launch  test_extract_topology4.launch  test_extract_topology_sim-simple.launch  test_extract_topology_sim-simple_corridor.launch  test_extract_topology_sim.launch  test_rviz.launch
infobot_topo_mapping/test_mike/: params.yaml  real-floor4_corridor-nogo-closed_doors.pgm  real-floor4_corridor-nogo-closed_doors.yaml  real-floor4_corridor-nogo-topo.yaml  test_extract_topology_floor4.launch
infobot_topo_msgs/: CMakeLists.txt  package.xml
infobot_topo_msgs/msg/: MetricMapTransform.msg  TopologicalMap.msg  TopologicalPlace.msg  TopologicalView.msg
infobot_topo_msgs/srv/: ApplyRectangleFilter.srv  GetTopologicalMap.srv  ProcessCurrentMetricMap.srv  ProcessMetricMap.srv  PublishTopologicalMap.srv
infobot_topo_server/: CMakeLists.txt  package.xml
infobot_topo_server/src/: topo_saver.cpp  topo_server.cpp
infobot_topo_server/test/: .gitignore  test_topo_map.yaml  test_topo_server.launch
infobot_topo_store/: CMakeLists.txt  package.xml
infobot_topo_store/src/: topo_store.cpp
