<?xml version="1.0"?>
<package>

  <!-- Package Info -->
  <name>infobot_amcl</name>
  <version>0.0.0</version>
  <description>
    InfoBot Framework: Configuration and launch files for the AMCL (Adaptive Monte Carlo Localization) localization algorithm.
  </description>
  <maintainer email="mjyc@cs.washington.edu">Michael Jae-Yoon Chung</maintainer>
  <license>TODO</license>
  <!-- url type="website"></url -->
  <!-- url type="repository"></url -->

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>amcl</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>

</package>
