<?xml version="1.0"?>
<package>
  <name>infobot_find_viewpoint</name>
  <version>0.0.0</version>
  <description>
    InfoBot Framework: The infobot_find_viewpoint package provides an implementation of an action that, given a pmap, will attempt to find a viewpoint that has the maximum visibility.
  </description>
  <author email="mjyc@cs.washington.edu">Michael Jae-Yoon Chung</author>
  <maintainer email="mjyc@cs.washington.edu">Michael Jae-Yoon Chung</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>python-opencv</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>infobot_map_msgs</build_depend>
  <build_depend>infobot_topo_msgs</build_depend>
  <build_depend>infobot_find_viewpoint_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>>

  <run_depend>roscpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>python-opencv</run_depend>
  <run_depend>infobot_image_server</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>infobot_map_msgs</run_depend>
  <run_depend>infobot_topo_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>infobot_move_base</run_depend>
  <run_depend>infobot_map_store</run_depend>
  <run_depend>infobot_pmap_store</run_depend>
  <run_depend>infobot_octomap_store</run_depend>
  <run_depend>infobot_topomap_store</run_depend>
  <run_depend>infobot_find_viewpoint_msgs</run_depend>
  <!-- NOTE: uncomment below pkgs to run test launch files -->
  <!-- <run_depend>infobot_path_server</run_depend>
  <run_depend>infobot_uw_systems</run_depend>
  <run_depend>infobot_uw_world</run_depend> -->

</package>
