<?xml version="1.0"?>
<package>
  <name>infobot_map_store</name>
  <version>0.0.0</version>
  <description>
    InfoBot Framework: File-based storage management for occupancy maps.
  </description>
  <author email="mjyc@cs.washington.edu">Michael Jae-Yoon Chung</author>
  <maintainer email="mjyc@cs.washington.edu">Michael Jae-Yoon Chung</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>infobot_map_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>infobot_map_msgs</run_depend>

</package>
