<?xml version="1.0"?>
<package>
  <name>infobot_octomap_store</name>
  <version>0.0.0</version>
  <description>
    InfoBot Framework: File-based storage management for octomap maps.
  </description>
  <author email="mjyc@cs.washington.edu">Michael Jae-Yoon Chung</author>
  <maintainer email="mjyc@cs.washington.edu">Michael Jae-Yoon Chung</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>octomap_server</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>octomap_server</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
