<?xml version="1.0"?>
<package>

  <!-- Package Info -->
  <name>infobot_topo_msgs</name>
  <version>0.0.0</version>
  <description>
    InfoBot Framework: Topological map messages.
  </description>
  <author email="a.pronobis@gmail.com">Andrzej Pronobis</author>
  <maintainer email="mjyc@cs.washington.edu">Michael Jae-Yoon Chung</maintainer>
  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
