<package>

  <!-- Package Info -->
  <name>infobot_topo_server</name>
  <version>0.0.0</version>
  <description>
    InfoBot Framework: Saves and loads topological maps.
  </description>
  <author email="a.pronobis@gmail.com">Andrzej Pronobis</author>
  <maintainer email="mjyc@cs.washington.edu">Michael Jae-Yoon Chung</maintainer>
  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>infobot_topo_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>infobot_topo_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>

</package>
